<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bloodhoud</string>
    
    <string name="menu_settings">Settings</string>
    
    <!-- Activity login -->
    <string name="title_activity_access_callSmsListener">Bloodhoud</string>
    <string name="label_password">Password</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    
    
    <!-- Activity per export dati -->
    <string name="title_activity_control_data">Gestione dati</string>
    <string name="button_export">Export</string>
    <string name="button_exportDb">Export file DB</string>
    <string name="button_SendAgainDataToServer">Reinvia tutti i dati al server</string>
    <string name="button_SendAgainPhoneToServer">Reinvia phone al server</string>
    <string name="button_SendOldData">Carica vecchi dati in db ed invia al server</string>
    <string name="button_clear_logfile">Clear log</string>
    <string name="label_TaskResult">..</string>
    

</resources>