<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content">
	<LinearLayout 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical">
		<!-- Content here -->
	    
	    <TextView android:id="@+controlActivity/labelMessage" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content" 
	        android:layout_marginTop="19dp" 
	        android:text="@string/label_TaskResult"/>		
		
	    <Button android:id="@+controlActivity/buttonExport" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content" 
	        android:layout_marginLeft="18dp" 
	        android:layout_marginTop="21dp" 
	        android:text="@string/button_export"/>
	
	    <Button android:id="@+controlActivity/buttonExportDB" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content" 
	        android:layout_marginLeft="18dp" 
	        android:layout_marginTop="21dp" 
	        android:text="@string/button_exportDb"/>
	    
	    <Button android:id="@+controlActivity/buttonSendAgaiDataToServer" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content" 
	        android:layout_marginLeft="18dp" 
	        android:layout_marginTop="21dp" 
	        android:text="@string/button_SendAgainDataToServer"/>
	
	    <Button android:id="@+controlActivity/buttonSendOldData" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content" 
	        android:layout_marginLeft="18dp" 
	        android:layout_marginTop="21dp" 
	        android:text="@string/button_SendOldData"/>
	    
	    <Button android:id="@+controlActivity/buttonClear" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content" 
	        android:layout_marginTop="15dp" 
	        android:text="@string/button_clear_logfile"/>
	    
	    <Button android:id="@+controlActivity/buttonCancel" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content" 
	        android:layout_marginTop="15dp" 
	        android:text="@string/button_cancel"/>

		
	</LinearLayout>
</ScrollView>    
