<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <TextView android:id="@+loginActvity/labelMessage" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_gravity="fill_horizontal" android:text="@string/label_password"/>
    <EditText android:id="@+loginActvity/textPassword" android:layout_width="match_parent" android:layout_height="wrap_content" android:ems="10" android:inputType="textPassword" android:maxLength="10">
        <requestFocus />
    </EditText>
    <Button android:id="@+loginActvity/buttonOk" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/button_ok"/>
    <Button android:id="@+loginActvity/buttonCancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/button_cancel"/>


</LinearLayout>